[gd_scene load_steps=6 format=3 uid="uid://dvu2sqcfauvo4"]

[ext_resource type="Script" path="res://Main.gd" id="1_fqu1e"]
[ext_resource type="PackedScene" uid="uid://vyxx31o5q7ga" path="res://mob.tscn" id="2_q8bvf"]
[ext_resource type="PackedScene" uid="uid://vbpfuwj4ny35" path="res://player.tscn" id="3_kiqop"]
[ext_resource type="PackedScene" uid="uid://bmecko8r5vga1" path="res://hud.tscn" id="4_i2pc4"]

[sub_resource type="Curve2D" id="Curve2D_01suh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_fqu1e")
mob_scene = ExtResource("2_q8bvf")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 720.0
color = Color(0.572549, 1, 0.670588, 1)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_01suh")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Mob" parent="." instance=ExtResource("2_q8bvf")]

[node name="Player" parent="." instance=ExtResource("3_kiqop")]

[node name="HUD" parent="." instance=ExtResource("4_i2pc4")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
